--- a/src/app/components/data-display/data-display.component.html
+++ b/src/app/components/data-display/data-display.component.html
@@ -1,17 +1,40 @@
-<h2>test</h2>
-<table>
-  <tr *ngFor="let data of dataStream">
-    <td>{{ data.id }}</td>
-    <td>{{ data.int }}</td>
-    <td>{{ data.float }}</td>
-    <td [ngStyle]="{'background-color': data.color}">{{ data.color }}</td>
-    <td>
-      <table>
-        <tr>
-          <td>{{ data.child.id }}</td>
-          <td [ngStyle]="{'background-color': data.child.color}">{{ data.child.color }}</td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+<div class="container">
+  <table class="data-table">
+    <thead>
+    <tr>
+      <th>id</th>
+      <th>int</th>
+      <th>float</th>
+      <th>color</th>
+      <th>child</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let item of dataStream">
+      <td>{{ item.id }}</td>
+      <td>{{ item.int }}</td>
+      <td>{{ item.float }}</td>
+      <td>
+        <div class="color-box" [ngStyle]="{'background-color': item.color}">
+          {{ item.color }}
+        </div>
+      </td>
+      <td>
+        <table class="child-table">
+          <thead>
+          <tr>
+            <th>id</th>
+            <th>color</th>
+          </tr>
+          </thead>
+          <tr>
+
+            <td class="child-id">{{ item.child.id }}</td>
+            <td class="child-color" [style.background-color]="item.child.color">{{ item.child.color }}</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
