--- a/src/app/components/data-display/data-display.component.scss
+++ b/src/app/components/data-display/data-display.component.scss
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
 }
 
 .container{
+  height: calc(100vh - 110px);
+  overflow-y: auto;
   max-width: 1280px;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
