--- a/src/app/components/data-display/data-display.component.html
+++ b/src/app/components/data-display/data-display.component.html
@@ -10,7 +10,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of dataStream">
+    <tr *ngFor="let item of dataStream; trackBy: trackById">
       <td>{{ item.id }}</td>
       <td>{{ item.int }}</td>
       <td>{{ item.float }}</td>
