--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background: aquamarine;
-}
+
 
 html, body { height: 100vh;  overflow: hidden}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;background: aquamarine; }
