--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<button class="m5" (click)="sendMessage(1)" mat-fab extended color="primary">Send Message</button>
+<button class="m5" (click)="sendMessage(2)" mat-fab extended color="primary">Send Message</button>
 <app-settings-component></app-settings-component>
 <app-data-display></app-data-display>
+<app-websocket></app-websocket>
